--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 body{
     background-color: rgba(80, 216, 216, 0.753);
     box-sizing: border-box;
@@ -11,7 +10,7 @@ h3{
     font-size:40px ;
 }
 
-.header{
+header{
     background-color: rgb(22, 119, 55);
     background-image: linear-gradient(to bottom,green , rgb(22, 119, 55));
     font-size: 20px;
@@ -27,15 +26,15 @@ h3{
    
 }
 
-.menu{
+SECTION{
     background-color: rgb(22, 119, 55);
     color: aliceblue;
     font-size: 15px;
-    text-align: center;
+    
     position: relative;
     align-items: center;
-    display: flex;
-    justify-content: center;
+    
+    
     border: 0px;
     margin-left: -1%;
     margin-right: -1%;
@@ -43,18 +42,22 @@ h3{
     
 }
 
-.menu  div {
+NAV > a {
     border: 5px;
     margin-top: 1px;
     margin-left: 5%;
     margin-right: 5%;
     margin-bottom: 0px;
+    display: inline-block;
+    text-decoration: none;
+    color: aliceblue;
+    
     
     
     
 }
 
-.history {
+main {
 background-color: antiquewhite;
 height: 100%;
 position: relative;
@@ -69,6 +72,14 @@ box-shadow: 0 0 1em rgb(95, 94, 91);
 
 }
 
+article{
+
+}
+
+article >p>a {
+    color: black;
+}
+
 h1 {
     margin-top: 0px;
     font-family: 'Roboto', sans-serif;
@@ -81,7 +92,7 @@ h1 {
     padding-top: 6px;
 
 }
-.imagem {
+img {
     margin-top: 15px;
     margin-left: 10%;
     margin-right: 10%;  
@@ -109,7 +120,7 @@ position: relative;
     text-align: center;
 }
 
-.extra{
+aside{
     background-color: white;
     font-size: ;
     display: block;
@@ -123,7 +134,7 @@ padding-bottom: 30px;
 
 }
 
-.ex2{
+.extra{
     background-color: rgb(84, 211, 84);
     position: relative;
     text-align: center;
@@ -135,7 +146,7 @@ padding-bottom: 30px;
     
 }
 
-.extra > h2{
+aside > h2{
     background-color: rgb(28, 175, 28);
     border-radius: 346px 0px 20px;
 }
