--- a/style.css
+++ b/style.css
@@ -1,16 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Dancing+Script&family=Lora:ital@1&family=Montserrat:ital,wght@1,300&family=Open+Sans&family=Playfair+Display:ital,wght@1,500&family=Roboto+Mono:ital,wght@1,300&family=Roboto:ital,wght@0,700;1,700;1,900&family=Shadows+Into+Light&display=swap');
+
+@font-face {
+    font-family: android;
+    src: url(assets/font/IDroid\ Bold\ Italic.otf);
+}
+:root{
+    --font-destaque: 'Bebas Neue', cursive;
+    --font-android: 'android','cursive'; 
+    --font-padrao: 'Arial, Helvetica, sans-serif;'
+
+}
+
 body{
     background-color: rgba(80, 216, 216, 0.753);
     box-sizing: border-box;
     display: block;
     overflow-x: hidden
-    
-
-}
-h3{
-    font-size:40px ;
 }
 
 header{
+    font-family: var(--font-destaque);
     background-color: rgb(22, 119, 55);
     background-image: linear-gradient(to bottom,green , rgb(22, 119, 55));
     font-size: 20px;
@@ -22,24 +31,23 @@ header{
     border: 0px;
     margin-top: -1%;
     margin-left: -1%;
-    margin-right: -1%;
-   
+    margin-right: -1%; 
+}
+header > h1{
+    font-family: var(--font-destaque);
+
+    
 }
 
 SECTION{
     background-color: rgb(22, 119, 55);
     color: aliceblue;
     font-size: 15px;
-    
     position: relative;
     align-items: center;
-    
-    
     border: 0px;
     margin-left: -1%;
-    margin-right: -1%;
-    
-    
+    margin-right: -1%; 
 }
 
 NAV > a {
@@ -50,39 +58,26 @@ NAV > a {
     margin-bottom: 0px;
     display: inline-block;
     text-decoration: none;
-    color: aliceblue;
-    
-    
-    
-    
+    color: aliceblue;  
 }
 
 main {
-background-color: antiquewhite;
-height: 100%;
-position: relative;
-text-align: center;
-padding-top: 2px;
-padding-bottom: 0px;
-border: 0px;
-margin-top: 0px;
-margin-left: 10%;
-margin-right: 10%;
-box-shadow: 0 0 1em rgb(95, 94, 91);
-
-}
-
-article{
-
-}
-
-article >p>a {
-    color: black;
-}
-
-h1 {
+    background-color: antiquewhite;
+    height: 100%;
+    position: relative;
+    text-align: center;
+    padding-top: 2px;
+    padding-bottom: 0px;
+    border: 0px;
     margin-top: 0px;
-    font-family: 'Roboto', sans-serif;
+    margin-left: 10%;
+    margin-right: 10%;
+    box-shadow: 0 0 1em rgb(95, 94, 91);
+}
+
+article >h1{
+    font-family: var(--font-android);
+    margin-top: 0px;
     background-color: rgba(131, 218, 131, 0.37);
     color: green;
     text-align: left;
@@ -90,33 +85,34 @@ h1 {
     margin-left: 3%;
     margin-right: 10%;  
     padding-top: 6px;
+}
+article >p{
+    font-family:var(--font-padrao);
+    font-size: 20px;
+}
 
+article >p>a {
+    color: black;
 }
 img {
     margin-top: 15px;
     margin-left: 10%;
     margin-right: 10%;  
     padding-top: 5px;
-padding-bottom: 30px;
-
-    text-align: center;
-
-
-   
-    
-    
+    padding-bottom: 30px;
+    text-align: center;  
 }
 
 .video{
     background-color: rgb(17, 163, 17);
     border: 0px;
-margin-top: 0px;
-margin-left: 0%;
-margin-right: 0%;
-margin-bottom: 0%;  
+    margin-top: 0px;
+    margin-left: 0%;
+    margin-right: 0%;
+    margin-bottom: 0%;  
     padding-top: 30px;
-padding-bottom: 30px;
-position: relative;
+    padding-bottom: 30px;
+    position: relative;
     text-align: center;
 }
 
@@ -129,7 +125,7 @@ aside{
     margin-left: 10%;
     margin-right: 10%;  
     padding-top: 1px;
-padding-bottom: 30px;
+    padding-bottom: 30px;
     
 
 }
@@ -138,12 +134,11 @@ padding-bottom: 30px;
     background-color: rgb(84, 211, 84);
     position: relative;
     text-align: center;
-margin-top: -20px;
+    margin-top: -20px;
     margin-left: 0%;
     margin-right: 0%;  
     padding-top: 1px;
-padding-bottom: 30px;
-    
+    padding-bottom: 30px;   
 }
 
 aside > h2{
