--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Dancing+Script&family=Lora:ital@1&family=Montserrat:ital,wght@1,300&family=Open+Sans&family=Playfair+Display:ital,wght@1,500&family=Roboto+Mono:ital,wght@1,300&family=Roboto:ital,wght@0,700;1,700;1,900&family=Shadows+Into+Light&display=swap');
 
+*{
+    margin: 0px;
+    padding: 0px;
+}
+
 @font-face {
     font-family: android;
     src: url(assets/font/IDroid\ Bold\ Italic.otf);
@@ -8,7 +13,6 @@
     --font-destaque: 'Bebas Neue', cursive;
     --font-android: 'android','cursive'; 
     --font-padrao: 'Arial, Helvetica, sans-serif;'
-
 }
 
 body{
@@ -27,11 +31,15 @@ header{
     position: relative;
     text-align: center;
     padding-top: 1px;
-    padding-bottom: 10px;
+    padding-bottom: 25px;
     border: 0px;
     margin-top: -1%;
     margin-left: -1%;
-    margin-right: -1%; 
+    margin-right: -1%;   
+}
+header>h1{
+    margin-top: 25px;
+    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.582);
 }
 
 SECTION{
@@ -43,17 +51,22 @@ SECTION{
     border: 0px;
     margin-left: -1%;
     margin-right: -1%; 
+    margin-bottom: 1px;  
 }
 
 NAV > a {
     border: 5px;
-    margin-top: 1px;
-    margin-left: 5%;
-    margin-right: 5%;
-    margin-bottom: 0px;
-    display: inline-block;
+    padding: 10px;
+    margin-left: 10px;
     text-decoration: none;
-    color: aliceblue;  
+    color: aliceblue; 
+    padding-bottom: 1px; 
+    transition-duration: 0.4s;
+}
+
+nav > a:hover {
+    background-color: rgba(0, 128, 0, 0.514);
+    color: rgba(0, 0, 0, 0.548);
 }
 
 main {
@@ -61,8 +74,10 @@ main {
     height: 100%;
     position: relative;
     text-align: center;
-    padding-top: 2px;
-    padding-bottom: 0px;
+    padding-top:1px ;
+    padding-right:0px ;
+    padding-bottom:0px ;
+    padding-left:0px ;
     border: 0px;
     margin-top: 0px;
     margin-left: 10%;
@@ -75,30 +90,35 @@ article >h1{
     margin-top: 0px;
     background-color: rgba(131, 218, 131, 0.37);
     color: green;
+    text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.384);
     text-align: left;
-    margin-top: 3px;
+    margin-top: -1px;
     margin-left: 3%;
     margin-right: 10%;  
-    padding-top: 6px;
+    padding-top: 8px;
 }
 article >p{
     font-family:var(--font-padrao);
     font-size: 20px;
+    margin: auto;
+    text-align: left;
+    padding-bottom: 15px;
+    padding-top: 15px;
+    padding-left:15px ;
+    padding-right:5px ;
 }
 
 article >p>a {
     color: black;
 }
-img {
-    margin-top: 15px;
-    margin-left: 10%;
-    margin-right: 10%;  
-    padding-top: 5px;
-    padding-bottom: 30px;
-    text-align: center;  
+picture >img  {
+    width: 100%;
+}
+picture > img.pequeno{
+    width: 40%;
 }
 
-.video{
+.video{ 
     background-color: rgb(17, 163, 17);
     border: 0px;
     margin-top: 0px;
@@ -120,9 +140,13 @@ aside{
     margin-left: 10%;
     margin-right: 10%;  
     padding-top: 1px;
-    padding-bottom: 30px;
-    
-
+    padding-bottom: 0px;
+}
+aside> h2{
+    margin-top: 5px;
+    margin-bottom: 0px;
+    padding-top:5px ;
+    padding-bottom:25px ;
 }
 
 .extra{
